--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,3 +1,34 @@
 <h1>
     This is landing page
 </h1>
+
+<!-- <h1>Application says what is??</h1>
+<ul>
+  <li *ngFor="let value of apiValues">{{value}}</li>
+</ul>
+ -->
+ <h1>{{title}}</h1>
+ <!-- <ul>
+   <li>
+     <a href="/">Home</a>
+   </li>
+   <li>
+    <a href="/complaints">Complaints</a>
+  </li>
+ </ul> -->
+ <div>
+    <form>
+        <mat-form-field>
+          <input matInput placeholder="Favorite food">
+        </mat-form-field>
+      
+        <mat-form-field>
+          <textarea matInput placeholder="Leave a comment"></textarea>
+        </mat-form-field>
+      </form>
+ <button mat-raised-button color="warn">Warn</button>
+  <br />
+    <div class="mat-app-background">
+      <mat-slider></mat-slider>
+    </div>
+  </div>
