--- a/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin-dashboard/admin-dashboard.component.html
@@ -227,7 +227,7 @@
                           {{complaint.reqmessage}}
                         </td>
                         <td>
-                          <button type="button" class="btn btn-primary" [style.display]="complaint.reqstatus == 'completed' ? 'none' : ''" (click)="editComplaints(complaint)" data-toggle="modal" data-target="#exampleModal">Edit</button>
+                          <button type="button" class="btn btn-primary" [style.display]="complaint.reqstatus == 'completed' ? 'none' : ''" (click)="editComplaints(complaint)">Edit</button>
                         </td>
                       </tr>
                     </tbody>
@@ -238,34 +238,31 @@
             </div>
           </div>
         </div>
-
+<!-- 
         <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
           <div class="modal-dialog" role="document">
-              <div class="modal-content">
-                  <div class="modal-header">
-                      <h5 class="modal-title" id="exampleModalLabel">{{manageComplaints.reqsub}}</h5>
-                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                          <span aria-hidden="true">&times;</span>
-                      </button>
-                  </div>
-                  <div class="modal-body">
-                    <p>Request Message: {{manageComplaints.reqmessage}}</p>
-                    <div class="form-group">
-                      <label for="comment">Admin Comment:</label>
-                      <textarea class="form-control" rows="5" id="comment"></textarea>
-                    </div>
-                    <div>
-                      <p class="complaints-date">Date Raised: {{manageComplaints.date}}</p>
-                      <p class="complaints-date">Updated Date: {{currentDate}}</p>
-                    </div>
-                  </div>
-                  <div class="modal-footer">
-                      <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                      <button type="button" class="btn btn-primary">Save changes</button>
-                  </div>
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
               </div>
+              <div class="modal-body">
+                <div class="form-group">
+                  <label for="comment">Admin Comment:</label>
+                  <textarea class="form-control" rows="5" id="comment"></textarea>
+                </div>
+                <div>
+                  <p class="complaints-date">Updated Date: {{currentDate}}</p>
+                </div>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+              </div>
+            </div>
           </div>
-      </div>
+        </div> -->
 
 
 
@@ -284,3 +281,4 @@
       </div>
     </footer>
   </div>
+</div>
