--- a/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin-dashboard/admin-dashboard.component.html
@@ -13,12 +13,12 @@
     <div class="sidebar-wrapper">
       <ul class="nav">
         <li class="nav-item active  ">
-          <a class="nav-link" href="./dashboard.html">
+          <a class="nav-link" href="/dashboard">
             <i class="material-icons">dashboard</i>
             <p>Dashboard</p>
           </a>
         </li>
-        <li class="nav-item ">
+        <!-- <li class="nav-item ">
           <a class="nav-link" href="./user.html">
             <i class="material-icons">person</i>
             <p>User Profile</p>
@@ -53,7 +53,7 @@
             <i class="material-icons">notifications</i>
             <p>Notifications</p>
           </a>
-        </li>
+        </li> -->
         <!-- <li class="nav-item active-pro ">
                     <a class="nav-link" href="./upgrade.html">
                         <i class="material-icons">unarchive</i>
@@ -78,7 +78,7 @@
           <span class="navbar-toggler-icon icon-bar"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-end">
-          <form class="navbar-form">
+          <!-- <form class="navbar-form">
             <div class="input-group no-border">
               <input type="text" value="" class="form-control" placeholder="Search...">
               <button type="submit" class="btn btn-white btn-round btn-just-icon">
@@ -86,9 +86,9 @@
                 <div class="ripple-container"></div>
               </button>
             </div>
-          </form>
+          </form> -->
           <ul class="navbar-nav">
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link" href="#pablo">
                 <i class="material-icons">dashboard</i>
                 <p class="d-lg-none d-md-block">
@@ -111,14 +111,10 @@
                 <a class="dropdown-item" href="#">Another Notification</a>
                 <a class="dropdown-item" href="#">Another One</a>
               </div>
-            </li>
+            </li> -->
             <li class="nav-item">
-              <a class="nav-link" href="#pablo">
-                <i class="material-icons">person</i>
-                <p class="d-lg-none d-md-block">
-                  Account
-                </p>
-              </a>
+              <i class="material-icons">person</i>
+              <span (click)="logout($event)">Logout</span>
             </li>
           </ul>
         </div>
@@ -227,7 +223,12 @@
                           {{complaint.reqmessage}}
                         </td>
                         <td>
-                          <button type="button" class="btn btn-primary" [style.display]="complaint.reqstatus == 'completed' ? 'none' : ''" (click)="editComplaints(complaint)">Edit</button>
+                          <button type="button" class="btn btn-primary" 
+                          [style.display]="complaint.reqstatus == 'completed' ? 'none' : ''" 
+                          (click)="editComplaints(complaint)">Edit</button>
+                          <button type="button" class="btn btn-primary" 
+                          [style.display]="complaint.reqstatus == 'InProgress' ? 'none' : ''" 
+                          (click)="viewComplaint(complaint)">View</button>
                         </td>
                       </tr>
                     </tbody>
@@ -238,7 +239,7 @@
             </div>
           </div>
         </div>
-<!-- 
+        <!-- 
         <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
           <div class="modal-dialog" role="document">
             <div class="modal-content">
