--- a/src/app/dialog-body/dialog-body.component.html
+++ b/src/app/dialog-body/dialog-body.component.html
@@ -1,20 +1,53 @@
-<h2 matDialogTitle>
-    {{data.title}}</h2>
-
-<mat-dialog-content>
-    <form name="form">
-        <!-- <mat-form-field>
-            <input matInput placeholder="Course Description" formControlName="description">
-        </mat-form-field> -->
-        <mat-form-field>
-            <input matInput formControlname="id">
-        </mat-form-field>
-    </form>
-
-
-</mat-dialog-content>
-
-<mat-dialog-actions>
-    <button mat-raised-button color="secondary" (click)="close()">Close</button>
-    <button mat-raised-button color="primary" (click)="save()">Save</button>
-</mat-dialog-actions>
+<div class="row">
+    <div class="col-lg-12 col-md-6 col-sm-6">
+        <div class="row">
+            <div class="col-lg-12">
+                <h2 matDialogTitle>
+                    Title: {{data.reqsub}}</h2>
+            </div>
+            <div class="col-lg-12">
+                <mat-dialog-content>
+                    <form name="form" class="example-form">
+                        <div class="row">
+                            <div class="col-lg-4 col-md-6 col-sm-6">
+                                <mat-form-field class="example-full-width">
+                                    <input matInput placeholder="Name" value="{{data.name}}" disabled>
+                                </mat-form-field>
+                            </div>
+                            <div class="col-lg-4 col-md-6 col-sm-6">
+                                <mat-form-field class="example-full-width">
+                                    <input matInput placeholder="Mobile" value="{{data.mobile}}" disabled>
+                                </mat-form-field>
+                            </div>
+                            <div class="col-lg-4 col-md-6 col-sm-6">
+                                <mat-form-field class="example-full-width">
+                                    <input matInput placeholder="Email" value="{{data.email}}" disabled>
+                                </mat-form-field>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-12 col-md-6 col-sm-6">
+                                <mat-form-field class="example-full-width" style="display: block">
+                                    <textarea matInput placeholder="Complaint Message" value="{{data.reqmessage}}" item-height="100px" disabled></textarea>
+                                </mat-form-field>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-12 col-md-6 col-sm-6">
+                                <mat-form-field class="example-full-width" style="display: block">
+                                    <textarea matInput placeholder="Admin Comments" value="{{data.admincoms}}" item-height="100px" disabled></textarea>
+                                </mat-form-field>
+                            </div>
+                        </div>
+                    </form>
+                </mat-dialog-content>
+            </div>
+            <div class="col-lg-12">
+                <mat-dialog-actions>
+                    <button mat-raised-button color="primary" (click)="update()">Update</button>
+                    <button mat-raised-button color="secondary" matDialogClose>Close</button>
+                </mat-dialog-actions>
+            </div>
+        </div>
+    </div>
+</div>
