admin dashboard update and get complaint by id

--- a/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin-dashboard/admin-dashboard.component.html
@@ -7,7 +7,7 @@
         -->
     <div class="logo">
       <a href="http://www.gampagoverdhan.com" class="simple-text logo-normal">
-        Gampa Goverdhan
+        Gampa Goverdhansss
       </a>
     </div>
     <div class="sidebar-wrapper">
@@ -227,7 +227,7 @@
                           [style.display]="complaint.reqstatus == 'completed' ? 'none' : ''" 
                           (click)="editComplaints(complaint)">Edit</button>
                           <button type="button" class="btn btn-primary" 
-                          [style.display]="complaint.reqstatus == 'InProgress' ? 'none' : ''" 
+                          [style.display]="complaint.reqstatus == 'InPending' ? 'none' : ''" 
                           (click)="viewComplaint(complaint)">View</button>
                         </td>
                       </tr>
