--- a/src/app/dialog-body/dialog-body.component.html
+++ b/src/app/dialog-body/dialog-body.component.html
@@ -7,7 +7,7 @@
             </div>
             <div class="col-lg-12">
                 <mat-dialog-content>
-                    <form name="form" class="example-form">
+                    <form name="form" class="example-form" [formGroup]="form">
                         <div class="row">
                             <div class="col-lg-4 col-md-6 col-sm-6">
                                 <mat-form-field class="example-full-width">
@@ -35,7 +35,8 @@
                         <div class="row">
                             <div class="col-lg-12 col-md-6 col-sm-6">
                                 <mat-form-field class="example-full-width" style="display: block">
-                                    <textarea matInput placeholder="Admin Comments" value="{{data.admincoms}}" item-height="100px" disabled></textarea>
+                                    <textarea matInput placeholder="Admin Comments" value="{{data.admincoms}}" item-height="100px" [disabled]="data.reqstatus === 'completed'"
+                                    formControlName="admincomments" name="admincomments"></textarea>
                                 </mat-form-field>
                             </div>
                         </div>
@@ -44,8 +45,12 @@
             </div>
             <div class="col-lg-12">
                 <mat-dialog-actions>
-                    <button mat-raised-button color="primary" (click)="update()">Update</button>
-                    <button mat-raised-button color="secondary" matDialogClose>Close</button>
+                    <!-- <button type="button" class="btn btn-primary" [hidden]="data.reqstatus === 'completed' ? 'none' : ''" (click)="updateComplaint(data)">Update</button> -->
+                    <!-- <button mat-raised-button color="warn" matDialogClose>Close</button> -->
+                    <!-- <button type="button" mat-raised-button color="warn" matDialogClose>Close</button> -->
+                    <button mat-button color="accent" type="button" class="btn btn-primary"
+                        [hidden]="data.reqstatus === 'completed' ? 'none' : ''" (click)="updateComplaint(data)">Update</button>
+                    <button mat-button color="warn" matDialogClose (click)="close()">Close</button>
                 </mat-dialog-actions>
             </div>
         </div>
