--- a/src/app/complaints/complaint.component.html
+++ b/src/app/complaints/complaint.component.html
@@ -1,1 +1,113 @@
-<h1>this is complaint html</h1>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+        aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="/">Home
+                    <span class="sr-only">(current)</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/complaints">Complaints</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/dashboard">Dashboard</a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
+                    aria-expanded="false">
+                    Dropdown
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="#">Action</a>
+                    <a class="dropdown-item" href="#">Another action</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#">Something else here</a>
+                </div>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link disabled" href="#">Disabled</a>
+            </li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
+    </div>
+</nav>
+<div class="container">
+    <div class="row">
+        <div class="col-lg-12 col-md-6 col-sm-6">
+            <div class="row" id="complaintForm">
+                <!-- style="border: 5px solid green; padding: 10px;" -->
+                <div class="col-lg-8 offset-lg-2">
+                    <div class="row">
+                        <div class="col-lg-12 col-md-6 col-sm-6">
+                            <h3>Raise a Request</h3>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-12 col-md-6 col-sm-6" *ngIf="isReqSaved">
+                            <div class="alert alert-success" role="alert">
+                                Your complaint has been saved and will get back to you shortly.
+                            </div>
+                        </div>
+                        <div class="col-lg-12 col-md-6 col-sm-6" *ngIf="isReqFailed">
+                            <div class="alert alert-danger" role="alert">
+                                Servers not responding, try again later.
+                            </div>
+                        </div>
+                    </div>
+                    <mat-dialog-content>
+                        <form name="form" class="example-form" [formGroup]="form" novalidate (ngSubmit)="saveComplaint()">
+                            <div class="row">
+                                <div class="col-lg-4 col-md-6 col-sm-6">
+                                    <mat-form-field class="example-full-width">
+                                        <input matInput placeholder="Name" formControlName="username" name="username">
+                                    </mat-form-field>
+                                </div>
+                                <div class="col-lg-4 col-md-6 col-sm-6">
+                                    <mat-form-field class="example-full-width">
+                                        <input matInput placeholder="Mobile" formControlName="usermobile" name="usermobile">
+                                    </mat-form-field>
+                                </div>
+                                <div class="col-lg-4 col-md-6 col-sm-6">
+                                    <mat-form-field class="example-full-width">
+                                        <input matInput placeholder="Email" formControlName="useremail" name="useremail">
+                                    </mat-form-field>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-lg-12 col-md-6 col-sm-6">
+                                    <mat-form-field class="example-full-width" style="display: block">
+                                        <input matInput placeholder="Request Title" item-height="100px" formControlName="reqtitle" name="reqtitle">
+                                    </mat-form-field>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-lg-12 col-md-6 col-sm-6">
+                                    <mat-form-field class="example-full-width" style="display: block">
+                                        <textarea matInput placeholder="Complaint Message" item-height="100px" formControlName="reqmessage" name="reqmessage"></textarea>
+                                    </mat-form-field>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-lg-3 col-md-6 col-sm-6">
+                                    <button type="submit" mat-raised-button color="accent" [disabled]="!form.valid">Post Complaint</button>
+                                </div>
+                                <div class="col-lg-2 col-md-6 col-sm-6">
+                                    <button mat-raised-button color="warn" (click)="complaintFormCancel($event)">Cancel</button>
+                                </div>
+                            </div>
+                        </form>
+                    </mat-dialog-content>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
